Video with audio working both in quicktime and vlc and saving generated video also on phone

--- a/VideoEditing/VideoEditing/Info.plist
+++ b/VideoEditing/VideoEditing/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) uses your photos to create a video</string>
 </dict>
 </plist>
