--- a/VideoEditing/VideoEditor/Info.plist
+++ b/VideoEditing/VideoEditor/Info.plist
@@ -20,5 +20,7 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) uses your photos to create a video</string>
 </dict>
 </plist>
